# cpp_export_to_matlab

./: CMakeLists.txt  README.md
DLL_folder/: CMakeLists.txt
DLL_folder/Includes/: calc_sum.h
DLL_folder/Src/: calc_sum.cpp
Main_solution/Src/: main_calc_sum.cpp
check/: CMakeLists.txt  myproj.cpp
check/mylib/: CMakeLists.txt  mylib.cpp  mylib.hpp
matlab/: calc_sum.h  script_use_dll.m
program1/: CMakeLists.txt  my_script.sh
program1/DLL_folder/Includes/: calc_sum.h
program1/matlab/: script_integrate_with_c.m  script_integrate_with_cpp.m
program2/: CMakeLists.txt
program2/DLL_folder/Includes/: Circle.h  Rectangle.h  Shape.h
program2/DLL_folder/Src/: Circle.cpp
program2/Main_solution/Src/: circle_main_code.cpp
program2/matlab/: script_integrate_with_cpp.m
